grammar.js
    compilation_unit: $ => seq(
      optional($.package_declaration),
      repeat($.uses_declaration),
      repeat($._top_level_declaration),
    ),

    package_declaration: $ => seq('package', field('name', $.qualified_name), optional(';')),

    uses_declaration: $ => seq(
      'uses',
      field('name', $.identifier),
      repeat(seq('.', choice(field('name', $.identifier), '*'))),
      optional(';'),
    ),

    qualified_name: $ => sep1($.identifier, '.'),

    _top_level_declaration: $ => seq(
      field('modifiers', optional($.modifiers)),
      choice(
        $.class_declaration,
        $.interface_declaration,
        $.enum_declaration,
        $.enhancement_declaration,
        $.annotation_declaration,
      ),
    ),

    // ── Modifiers & annotations ──────────────────────────────────

    class_declaration: $ => seq(
      'class',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      optional(field('superclass', $.superclass)),
      optional(field('interfaces', $.super_interfaces)),
      field('body', $.class_body),
    ),

    interface_declaration: $ => seq(
      'interface',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      optional(seq(choice('extends', 'implements'), field('interfaces', $.type_list))),
      field('body', $.interface_body),
    ),

    enum_declaration: $ => seq(
      'enum',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      optional(field('interfaces', $.super_interfaces)),
      field('body', $.enum_body),
    ),

    class_body: $ => seq('{', repeat($._class_member_declaration), '}'),

    _class_member_declaration: $ => seq(
      field('modifiers', optional($.modifiers)),
      $._member,
      optional(';'),
    ),

    interface_body: $ => seq('{', repeat($._interface_member_declaration), '}'),

    _interface_member_declaration: $ => seq(
      field('modifiers', optional($.modifiers)),
      choice(
        $.function_declaration,
        $.property_declaration,
        $.field_declaration,
        $.class_declaration,
        $.interface_declaration,
        $.enum_declaration,
      ),
      optional(';'),
    ),

    enum_body: $ => seq(
      '{',
      optional($.enum_constants),
      repeat($._class_member_declaration),
      '}',
    ),

    enum_constants: $ => seq(
      sep1($.enum_constant, ','),
      optional(','),
      optional(';'),
    ),

    enum_constant: $ => seq(
      field('name', $.identifier),
      optional(field('arguments', $.argument_list)),
    ),

    field_declaration: $ => seq(
      'var',
      field('name', $.identifier),
      optional($._type_annotation),
      optional(seq('as', optional('readonly'), field('alias', $.identifier))),
      optional(seq('=', field('value', $._expression))),
    ),

    function_declaration: $ => seq(
      'function',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', $.parameters),
      optional(seq(':', field('return_type', $._type))),
      field('body', optional($.statement_block)),
    ),

    constructor_declaration: $ => seq(
      'construct',
      field('parameters', $.parameters),
      optional(seq(':', field('return_type', $._type))),
      field('body', $.statement_block),
    ),

    parameters: $ => seq('(', commaSep($.parameter), ')'),

    parameter: $ => seq(
      repeat($.annotation),
      optional('final'),
      field('name', $.identifier),
      optional(choice(
        seq(':', field('type', $._type), optional(seq('=', field('default', $._expression)))),
        field('type', $.block_literal),
        seq('=', field('default', $._expression)),
      )),
    ),

    _type_annotation: $ => choice(
      seq(':', field('type', $._type)),
      field('type', $.block_literal),
    ),

    // ── Statements ───────────────────────────────────────────────

    statement_block: $ => seq('{', repeat($._statement), '}'),

    _statement: $ => choice(
      $.if_statement,
      $.try_statement,
      $.throw_statement,
      $.continue_statement,
      $.break_statement,
      $.return_statement,
      $.for_statement,
      $.while_statement,
      $.do_statement,
      $.switch_statement,
      $.using_statement,
      $.assert_statement,
      $.local_variable_declaration,
      $.expression_statement,
      $.statement_block,
      ';',
    ),

    if_statement: $ => prec.right(seq(
      'if', '(', field('condition', $._expression), ')',
      field('consequence', $._statement),
      optional(seq('else', field('alternative', $._statement))),
    )),

    return_statement: $ => choice(
      prec.dynamic(1, seq('return', field('value', $._expression))),
      'return',
    ),

    continue_statement: _ => 'continue',

    break_statement: _ => 'break',

    while_statement: $ => seq('while', '(', field('condition', $._expression), ')', field('body', $._statement)),

    local_variable_declaration: $ => prec.right(seq(
      optional('final'),
      'var',
      field('name', $.identifier),
      optional($._type_annotation),
      optional(seq('=', field('value', $._expression))),
    )),

    expression_statement: $ => $._expression,

    for_statement: $ => seq(
      choice('foreach', 'for'),
      '(',
      $.for_control,
      ')',
      field('body', $._statement),
    ),

    for_control: $ => choice(
      seq(field('value', $._expression), optional($.index_variable)),
      seq(
        optional('var'),
        field('name', $.identifier),
        'in',
        field('value', $._expression),
        optional(choice(
          seq($.index_variable, $.iterator_variable),
          seq($.iterator_variable, $.index_variable),
          $.index_variable,
          $.iterator_variable,
        )),
      ),
    ),

    _expression: $ => choice(
      $.assignment_expression,
      $.elvis_expression,
      $.ternary_expression,
      $.binary_expression,
      $.typeis_expression,
      $.type_as_expression,
      $.unary_expression,
      $.update_expression,
      $._primary_expression,
    ),

    assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
      field('left', $._expression),
      field('operator', choice(...ASSIGNMENT_OPERATORS)),
      field('right', $._expression),
    )),

    elvis_expression: $ => prec.left(PREC.ELVIS, seq(
      field('left', $._expression),
      '?:',
      field('right', $._expression),
    )),

    ternary_expression: $ => prec.right(PREC.TERNARY, seq(
      field('condition', $._expression),
      '?',
      field('consequence', $._expression),
      ':',
      field('alternative', $._expression),
    )),

    binary_expression: $ => choice(...BINARY_OPERATORS.map(([operator, precedence]) =>
      prec.left(precedence, seq(
        field('left', $._expression),
        field('operator', operator),
        field('right', $._expression),
      )),
    )),

    typeis_expression: $ => prec.left(PREC.REL, seq(
      field('value', $._expression),
      'typeis',
      field('type', $._type),
    )),

    type_as_expression: $ => prec.left(PREC.TYPE_AS, seq(
      field('value', $._expression),
      choice('as', 'typeas'),
      field('type', $._type),
    )),

    unary_expression: $ => prec(PREC.UNARY, seq(
      field('operator', choice('+', '-', '~', '!', 'not', 'typeof', 'statictypeof')),
      field('operand', $._expression),
    )),

    feature_literal: $ => prec(PREC.MEMBER, seq(
      optional(field('object', $._expression)),
      '#',
      field('name', choice($.identifier, 'construct')),
    )),

    true: _ => 'true',

    false: _ => 'false',

    number_literal: _ => token(choice(
      'NaN',
      'Infinity',
      seq(/0[xX]/, HEX_DIGITS, optional(/[lLsS]/)),
      seq(/0[bB]/, /[01]+/, optional(INT_SUFFIX)),
      seq('.', /[0-9]+/, optional(EXPONENT), optional(FLOAT_SUFFIX)),
      seq(
        /[0-9]+/,
        optional(choice(
          seq('.', /[0-9]*/, optional(EXPONENT), optional(FLOAT_SUFFIX)),
          seq(EXPONENT, optional(FLOAT_SUFFIX)),
          FLOAT_SUFFIX,
          INT_SUFFIX,
        )),
      ),
    )),

    string_literal: _ => token(choice(
      seq('"', repeat(choice(ESCAPE_SEQUENCE, /[^"\\]/)), '"'),
      seq("'", repeat(choice(ESCAPE_SEQUENCE, /[^'\\]/)), "'"),
    )),

    // ── Types ────────────────────────────────────────────────────

    _type: $ => choice(
      $._unannotated_type,
      $.intersection_type,
    ),

    class_or_interface_type: $ => choice(
      $._simple_class_or_interface_type,
      $.scoped_class_or_interface_type,
    ),

    _simple_class_or_interface_type: $ => choice(
      field('name', $.identifier),
      prec.dynamic(1, seq(
        field('name', $.identifier),
        field('type_arguments', $.type_arguments),
      )),
    ),

    identifier: _ => /[A-Za-z_$][A-Za-z_$0-9]*/,
