test/corpus/declarations.txt
================================================================================
Package and uses declarations
================================================================================

package xyz.ronella.gosu.sample

uses java.util.List
uses java.util.*

class Foo {
}

--------------------------------------------------------------------------------

(compilation_unit
  (package_declaration
    name: (qualified_name
      (identifier)
      (identifier)
      (identifier)
      (identifier)))
  (uses_declaration
    name: (identifier)
    name: (identifier)
    name: (identifier))
  (uses_declaration
    name: (identifier)
    name: (identifier))
  (class_declaration
    name: (identifier)
    body: (class_body)))

================================================================================
Class with fields, functions, constructor
================================================================================

class Person {
  var _name: String
  var _age: int = 0

  construct(name: String) {
    _name = name
  }

  function greet(): String {
    return "hi"
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (class_body
      (field_declaration
        name: (identifier)
        type: (class_or_interface_type
          name: (identifier)))
      (field_declaration
        name: (identifier)
        type: (class_or_interface_type
          name: (identifier))
        value: (number_literal))
      (constructor_declaration
        parameters: (parameters
          (parameter
            name: (identifier)
            type: (class_or_interface_type
              name: (identifier))))
        body: (statement_block
          (expression_statement
            (assignment_expression
              left: (identifier)
              right: (identifier)))))
      (function_declaration
        name: (identifier)
        parameters: (parameters)
        return_type: (class_or_interface_type
          name: (identifier))
        body: (statement_block
          (return_statement
            value: (string_literal)))))))

================================================================================
Interface and enum declarations
================================================================================

interface Shape {
  function area(): double
}

enum Color {
  RED, GREEN, BLUE
}

--------------------------------------------------------------------------------

(compilation_unit
  (interface_declaration
    name: (identifier)
    body: (interface_body
      (function_declaration
        name: (identifier)
        parameters: (parameters)
        return_type: (class_or_interface_type
          name: (identifier)))))
  (enum_declaration
    name: (identifier)
    body: (enum_body
      (enum_constants
        (enum_constant
          name: (identifier))
        (enum_constant
          name: (identifier))
        (enum_constant
          name: (identifier))))))

================================================================================
If, while, for statements
================================================================================

class Loops {
  function run() {
    if (true) {
      var x = 1
    } else {
      var y = 2
    }
    while (false) {
      break
    }
    for (var i in items) {
      continue
    }
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (class_body
      (function_declaration
        name: (identifier)
        parameters: (parameters)
        body: (statement_block
          (if_statement
            condition: (true)
            consequence: (statement_block
              (local_variable_declaration
                name: (identifier)
                value: (number_literal)))
            alternative: (statement_block
              (local_variable_declaration
                name: (identifier)
                value: (number_literal))))
          (while_statement
            condition: (false)
            body: (statement_block
              (break_statement)))
          (for_statement
            (for_control
              name: (identifier)
              value: (identifier))
            body: (statement_block
              (continue_statement))))))))

================================================================================
Expressions: binary, ternary, elvis, typeis, as
================================================================================

class Exprs {
  function calc() {
    var a = 1 + 2 * 3
    var b = a > 0 ? a : -a
    var c = a ?: 0
    var d = a typeis String
    var e = a as String
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (class_body
      (function_declaration
        name: (identifier)
        parameters: (parameters)
        body: (statement_block
          (local_variable_declaration
            name: (identifier)
            value: (binary_expression
              left: (number_literal)
              right: (binary_expression
                left: (number_literal)
                right: (number_literal))))
          (local_variable_declaration
            name: (identifier)
            value: (ternary_expression
              condition: (binary_expression
                left: (identifier)
                right: (number_literal))
              consequence: (identifier)
              alternative: (unary_expression
                operand: (identifier))))
          (local_variable_declaration
            name: (identifier)
            value: (elvis_expression
              left: (identifier)
              right: (number_literal)))
          (local_variable_declaration
            name: (identifier)
            value: (typeis_expression
              value: (identifier)
              type: (class_or_interface_type
                name: (identifier))))
          (local_variable_declaration
            name: (identifier)
            value: (type_as_expression
              value: (identifier)
              type: (class_or_interface_type
                name: (identifier)))))))))

================================================================================
Feature literals with optional object
================================================================================

class Features {
  function literals() {
    var implicit = #name
    var explicit = target#name
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (class_body
      (function_declaration
        name: (identifier)
        parameters: (parameters)
        body: (statement_block
          (local_variable_declaration
            name: (identifier)
            value: (feature_literal
              name: (identifier)))
          (local_variable_declaration
            name: (identifier)
            value: (feature_literal
              object: (identifier)
              name: (identifier))))))))
